--- a/WorkFlow/Views/Account/Register.cshtml
+++ b/WorkFlow/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("RegisterCompany", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("RegisterUser", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Заполните форму. Поля обозначенные звездочкой обезательные для заполнения.</h4>
@@ -51,7 +51,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.RegModel.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.RegModel.Email, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Company.Email, new { @class = "form-control" })
         </div>
     </div>
 
@@ -69,7 +69,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" onclick="window.location.href='@Url.Action("RegisterCompany", "Account")';" value="Register" />
+            <input type="submit" class="btn btn-default" onclick="window.location.href='@Url.Action("RegisterUser", "Account")';" value="Register" />
         </div>
     </div>
 }
