--- a/WorkFlow/Views/Companies/Index.cshtml
+++ b/WorkFlow/Views/Companies/Index.cshtml
@@ -1,24 +1,60 @@
 ﻿@model WorkFlow.Models.DataBaseModels.DBContext
+@using WorkFlow.Controllers;
 
 @{
     ViewBag.Title = "Компании";
-}
 
+}
+<script src="~/Scripts/MicrosoftMvcAjax.js" type="text/javascript"></script>
+
+
+@section scripts{
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+}   
 <div style="background-color:#5C8D94" class="navbar-collapse collapse navbar-responsive-collapse">
 
 </div>
-<nav class="navbar navbar-default-secondnavbar">
+<nav class="navbar navbar-default-secondnavbar" style="margin-top: 10px">
     <div class="container-fluid">
 
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-sort" style="margin-right: 7px"></i>Сортировка<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Action</a></li>
+
+
+                        <li class="active">
+                            @Ajax.ActionLink("Po alphavity", "UpdateTable", "Database", new { context = Model, actionNumber = ActionWithTable.SortDesc }, new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divResponse", InsertionMode = InsertionMode.Replace })
+
+                            @*<a><i class="glyphicon glyphicon-sort-by-attributes" style="margin-right: 7px"></i>По алфавиту </a>*@
+                        </li>
+
+                        @*<li class="active">@Html.Action("UpdateTable", "Database", new { context = Model, action = ActionWithTable.Sort })"<i class="glyphicon glyphicon-sort-by-attributes" style="margin-right: 7px"></i>По алфавиту</li>
+                            <li class="active">@Html.Action("UpdateTable", "Database", new { context = Model, action = ActionWithTable.SortDesc })"<i class="glyphicon glyphicon-sort-by-attributes-alt" style="margin-right: 7px"></i>По алфавиту</li>*@
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-sort-by-attributes" style="margin-right: 7px"></i>По дате создания компании</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-sort-by-attributes-alt" style="margin-right: 7px"></i>По дате создания компании</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-filter" style="margin-right: 7px"></i>Фильтрация<span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action </a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-stats" style="margin-right: 7px"></i>Статистика<span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action </a></li>
                         <li><a href="#">Another action</a></li>
                         <li><a href="#">Something else here</a></li>
                         <li class="divider"></li>
@@ -28,52 +64,17 @@
                     </ul>
                 </li>
             </ul>
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
+
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Link</a></li>
             </ul>
         </div>
     </div>
 </nav>
-<table class="table table-hover ">
-    <caption>Companies</caption>
-    <thead>
-        <tr>
-            <th>Название компании</th>
-            <th>Город</th>
-            <th>E-mail</th>
-            <th>Адрес</th>
-            <th>Телефон</th>
-            <th>Сайт</th>
-            <th>Форма собственности</th>
-            <th>Дата создания</th>
-        </tr>
-    </thead>
-    <tbody>
-        @{foreach (var a in Model.Companies)
-        {
-            <tr>
-                <td>@a.Name</td>
-                <td>@a.City</td>
-                <td>@a.Email</td>
-                <td>@a.Address</td>
-                <td>@a.Phone</td>
-                <td>@a.Website</td>
-                <td>@a.PropertyForm</td>
-                <td>@a.CreatingDate.Value.Date</td>
-            </tr>
-        }
-        }
-    </tbody>
-</table>
 
-
-
+<div id="divResponse">
+    @Html.Partial("_CompaniesListPartial")
+</div>
 @*<table class="table">
         <tr>
             <th>
