--- a/WorkFlow/Views/Shared/_LoginPartial.cshtml
+++ b/WorkFlow/Views/Shared/_LoginPartial.cshtml
@@ -29,10 +29,8 @@
         <a class="dropdown-toggle" href="#" data-toggle="dropdown"> Войти <strong class="caret"></strong></a>
         <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
             <form method="post" action="login" accept-charset="UTF-8" style="margin-bottom:5px">
-                <input style="margin-bottom: 15px;" type="text" placeholder=" Логин" id="username" name="username">
-                <input style="margin-bottom: 15px;" type="password" placeholder=" Пароль" id="password" name="password">
-                <input style="float: left; margin-right: 10px;" type="checkbox" name="remember-me" id="remember-me" value="1">
-                <label class="string optional" for="user_remember_me">Не выходить из системы</label>
+                <input style="margin-bottom: 15px; border-color: #345054; border-width:thin" type="text" placeholder=" Логин" id="username" name="username">
+                <input style="margin-bottom: 15px; border-color: #345054; border-width:thin" type="password" placeholder=" Пароль" id="password" name="password">
                 <input class="btn btn-primary btn-block" type="submit" onclick="window.location.href='@Url.Action("Login", "Account")';" id="sign-in" value=" Войти">
               
             </form>
