--- a/WorkFlow/Views/Companies/Index.cshtml
+++ b/WorkFlow/Views/Companies/Index.cshtml
@@ -43,18 +43,10 @@
                         <li><a href="@Ajax.ActionLink("По дате создания компании", "UpdateTable", "Database", new { context = Model, actionNumber = ActionWithTable.SortDesc }, new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divResponse", InsertionMode = InsertionMode.Replace }, new { @class = "glyphicon glyphicon-trash" })"></a></li>*@
                     </ul>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-filter" style="margin-right: 7px"></i>Фильтрация<span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Action </a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+                
+
+                 @Html.Partial("_CompaniesFilterFormPartial")
+ 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-stats" style="margin-right: 7px"></i>Статистика<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
