--- a/WorkFlow/Views/Account/Login.cshtml
+++ b/WorkFlow/Views/Account/Login.cshtml
@@ -5,22 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Введите свои логин и пароль:</h2>
+<h2>Повторите ввод логина и пароля:</h2>
 
-<div class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title">Modal title</h4>
-            </div>
-            <div class="modal-body">
-                <p>One fine body…</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+
+<form method="post" action="@Url.Action("Login", "Account")" accept-charset="UTF-8" style="margin-bottom:5px">
+    @Html.AntiForgeryToken()
+    <div style="margin-bottom: 15px; border-color: #345054; border-width:thin">
+        @Html.EditorFor(m => m.Email, "Название компании")
+        @Html.EditorFor(m => m.Password, "Пароль")
+    </div>
+    @*<input  type="text" placeholder=" E-mail" id="email" name="email">
+        <input style="margin-bottom: 15px; border-color: #345054; border-width:thin" type="password" placeholder=" Пароль" id="password" name="password">*@
+    <input class="btn btn-primary btn-block" type="submit" id="sign-in" value=" Войти">
+
+</form>
+
