--- a/WorkFlow/Views/Vacancies/_VacanciesListPartial.cshtml
+++ b/WorkFlow/Views/Vacancies/_VacanciesListPartial.cshtml
@@ -7,10 +7,10 @@
 <table class="table table-hover" id="companyTable">
     <thead>
         <tr>
-            <th>Название компании</th>
-            <th>Город</th>
-            <th>E-mail</th>
-            <th>Адрес</th>
+            <th>Название вакансии</th>
+            <th>НАзвание компании</th>
+            <th>Дата открытия компании</th>
+            <th>Кол-во позиций</th>
             <th>Телефон</th>
         </tr>
     </thead>
