--- a/WorkFlow/Views/Account/Register.cshtml
+++ b/WorkFlow/Views/Account/Register.cshtml
@@ -6,12 +6,14 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+
     <h4>Заполните форму. Поля обозначенные звездочкой обезательные для заполнения.</h4>
     <hr />
     <div class="form-group">
         @Html.LabelFor(m => m.Company.Name, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Company.Name, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Company.Name, new { htmlAttributes = new { @class = "form-control" } })
             <div style="color:#ff1b1b">@Html.ValidationMessageFor(model => model.Company.Name)</div>
         </div>
     </div>
@@ -19,14 +21,14 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Company.Address, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Company.Address, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Company.Address, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Company.Website, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Company.Website, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Company.Website, new { htmlAttributes = new { @class = "form-control" } })
             <div style="color:#ff1b1b">@Html.ValidationMessageFor(model => model.Company.Website)</div>
         </div>
     </div>
@@ -34,7 +36,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Company.City, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Company.City, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Company.City, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
 
@@ -47,8 +49,8 @@
     </div>
 
     List<SelectListItem> items = new List<SelectListItem>();
-    items.Add(new SelectListItem { Text = "государственная", Value = "0" });
-    items.Add(new SelectListItem { Text = "частная", Value = "1" });
+    items.Add(new SelectListItem { Text = "государственная", Value = "государственная" });
+    items.Add(new SelectListItem { Text = "частная", Value = "частная" });
     <div class="form-group">
         @Html.LabelFor(m => m.Company.PropertyForm, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -57,19 +59,25 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Company.CreatingDate, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(model => model.Company.CreatingDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBoxFor(model => model.Company.CreatingDate, new { @class = "form-control datepicker", placeholder = "mm/dd/yyyy"})
-            <div style="color:#ff1b1b">
-                @Html.ValidationMessageFor(model => model.Company.CreatingDate)
-            </div>
+            @Html.EditorFor(model => model.Company.CreatingDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Company.CreatingDate, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Company.Email, new { @class = " control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(m => m.Company.Email, new { htmlAttributes = new { @class = "form-control" }  })
+            <div style="color:#ff1b1b">@Html.ValidationMessageFor(model => model.Company.Email)</div>
         </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.RegModel.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.RegModel.Email, new { @class = "form-control" })
+            @Html.EditorFor(m => m.RegModel.Email, new { htmlAttributes = new { @class = "form-control" } })
             <div style="color:#ff1b1b">@Html.ValidationMessageFor(model => model.RegModel.Email)</div>
         </div>
     </div>
@@ -89,6 +97,8 @@
             <div style="color:#ff1b1b">@Html.ValidationMessageFor(model => model.RegModel.ConfirmPassword)</div>
         </div>
     </div>
+
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
