--- a/WorkFlow/Content/bootstrap.css
+++ b/WorkFlow/Content/bootstrap.css
@@ -3652,7 +3652,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #01626E;
+  background-color: #01626e;
+  color:white;
 }
 .nav > li.disabled > a {
   color: #999999;
@@ -3667,7 +3668,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #01626E;
+  background-color: #01626e;
   border-color: #158cba;
 }
 .nav .nav-divider {
