--- a/WorkFlow/Views/Vacancies/_AddRequirementPartial.cshtml
+++ b/WorkFlow/Views/Vacancies/_AddRequirementPartial.cshtml
@@ -1,22 +1,40 @@
-﻿@model WorkFlow.Models.DataBaseModels.DBContext
+﻿@model WorkFlow.Models.DataBaseModels.Requirements
 
-@*<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-large">Запустить пример всплывающего окна</a>*@
+@*<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-large">Запустить пример всплывающего окна</a>
 
-@*<div id="myModal" class="modal fade-">
+<div id="myModal" class="modal fade-">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title">Add requirement</h4>
                 </div>
+                  
                 <div class="modal-body">
-                    @Html.EditorFor(m => m.Requirements.)
+                    @Html.EditorFor(m => m.MaxValue)
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" onclick=@Url.Action("CreateRequirement", "Manage", new { maxValue = "#max"})>Save changes</button>
+                <div class="modal-body">
+                    @Html.EditorFor(m => m.MinValue)
                 </div>
-            </div>
+                <div class="modal-body">
+                    @{List<SelectListItem> items = new List<SelectListItem>();
+                    foreach (var v in ViewBag.Skills)
+                    {
+                        items.Add(new SelectListItem { Text = v.Name, Value = v.Id.ToString() });
+                    } 
+                    }   
+
+                    @Html.DropDownListFor(m => m.SkillId, items, new { @class = "form-control" })
+                </div>
+                <button type="submit" class="btn btn-default" data-dismiss="modal">submit</button>
+
+                
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick=@Url.Action("CreateRequirement", "Manage", new { maxValue = "#max"})>Save changes</button>
+                    </div>
+                </div>
         </div>
     </div>*@
 <link href="@Url.Content("~/Content/slick.grid.css")" rel="stylesheet" type="text/css" />
@@ -24,7 +42,7 @@
 <script src="@Url.Content("~/Scripts/SlickGrid/slick.core.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/SlickGrid/slick.grid.js")" type="text/javascript"></script>
 
-@*<link rel="stylesheet" href="../slick.grid.css" type="text/css" />*@
+@*<link rel="stylesheet" href="../slick.grid.css" type="text/css" />
 <link rel="stylesheet" href="../css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css" />
 <link rel="stylesheet" href="examples.css" type="text/css" />
 
@@ -115,6 +133,14 @@
             var item = args.item;
             grid.invalidateRow(data.length);
             data.push(item);
+            $.ajax({
+                type: "POST",
+                url: "Controllers/ManageController/CreateRequirement",
+                contentType: "application/json; charset=utf-8",
+                failure: function(response) {
+                    alert(response.d);
+                }
+            });
             grid.updateRowCount();
             grid.render();
         });
