--- a/WorkFlow/Views/Vacancies/Create.cshtml
+++ b/WorkFlow/Views/Vacancies/Create.cshtml
@@ -74,8 +74,24 @@
         </div>
 
         <div class="form-group col-md-12">
+            <div id="requirementsSection">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Skill</th>
+                            <th>Min Points</th>
+                            <th>Max Points</th>
+                        </tr>
+                    </thead>
+                    <tbody id="requirementsContent">
+                        @Html.EditorFor(m => m.Requirements)
+                    </tbody>
+                </table>
+                @*@Html.Partial("_AddRequirementPartial", Model.Requirements)*@
+            </div>
 
-                @Html.Partial("_AddRequirementPartial", new WorkFlow.Models.DataBaseModels.Requirements())
+            <button id="addNewRequirementButon">Add new requirement</button>
+
             </div>
 
 
@@ -90,3 +106,20 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script type="text/javascript">
+    $(function () {
+        $('#addNewRequirementButon').click(function () {
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("AddNewRequirement", "Manage")',
+                success: function (data) {
+                    $('#requirementsContent').append(data);
+                },
+                error: function () {
+                    alert("error!");
+                }
+            });
+        });
+    });
+</script>
