--- a/WorkFlow/Views/Shared/EditorTemplates/Requirements.cshtml
+++ b/WorkFlow/Views/Shared/EditorTemplates/Requirements.cshtml
@@ -2,17 +2,28 @@
 
 @using Workflow.Helpers;
 
-@using(Html.BeginCollectionItem("requirements")) {
-<tr>
-    <td>
-        nothing
-        @*@Html.EditorFor( m => requirement.Skills)*@
-    </td>
-    <td>
-        @Html.EditorFor(m => m.MinValue)
-    </td>
-    <td>
-        @Html.EditorFor(m => m.MaxValue)
-    </td>
-</tr>
+@using (Html.BeginCollectionItem("requirements"))
+{
+    <div class="deleteRow">
+        <div class="col-md-3">
+            @*@Html.EditorFor( m => requirement.Skills)*@
+        </div>
+        <div class ="col-md-3">
+            @Html.EditorFor(m => m.MinValue)
+        </div>
+        <div class="col-md-3">
+            @Html.EditorFor(m => m.MaxValue)
+        </div>
+    </div>
 }
+
+<br />
+<br />
+
+<script>
+    $("div.deleteRow").live("click", function () {
+        // $(this).parents("div.editorRow:first").remove();
+        alert($(this));
+        return false;
+    });
+</script>
