--- a/WorkFlow/Views/Vacancies/Create.cshtml
+++ b/WorkFlow/Views/Vacancies/Create.cshtml
@@ -13,7 +13,7 @@
     new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <input type="submit" value="Download a template" /> 
+    <input type="submit" value="Download a template" />
 }
 
 <br />
@@ -30,7 +30,7 @@
 <hr />
 <h2>Or you can fill out form here and click "Create". </h2>
 
-@using (Ajax.BeginForm("CreateVacancy", "Manage", new AjaxOptions{HttpMethod = "POST"}))
+@using (Ajax.BeginForm("CreateVacancy", "Manage", new AjaxOptions { HttpMethod = "POST" }))
 {
     @Html.AntiForgeryToken()
 
@@ -73,35 +73,38 @@
 
         </div>
 
-        <div class="form-group col-md-12">
-            <div id="requirementsSection">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Skill</th>
-                            <th>Min Points</th>
-                            <th>Max Points</th>
-                        </tr>
-                    </thead>
-                    <tbody id="requirementsContent">
-                        @Html.EditorFor(m => m.Requirements)
-                    </tbody>
-                </table>
+        <div class="form-group col-md-9">
+            <div id="requirementsSection" class="text-center">
+                <div class="col-md-3">
+                    <b>Skill</b>
+                </div>
+                <div class="col-md-3">
+                    <b>Min Points</b>
+                </div>
+                <div class="col-md-3">
+                    <b>Max Points</b>
+                </div>
+                <br />
+                <br />
+                <div id="requirementsContent">
+                    @Html.EditorFor(m => m.Requirements)
+                </div>
+
                 @*@Html.Partial("_AddRequirementPartial", Model.Requirements)*@
             </div>
 
             <button id="addNewRequirementButon">Add new requirement</button>
 
-            </div>
+        </div>
 
 
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
+    </div>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
