--- a/WorkFlow/Views/Manage/EditInformationAbout.cshtml
+++ b/WorkFlow/Views/Manage/EditInformationAbout.cshtml
@@ -89,7 +89,7 @@
                         </span>
                     </div>
 
-                    <div class="form-group">
+                    @*<div class="form-group">
                         <span class="col-md-5">
                             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
                         </span>
@@ -97,7 +97,7 @@
                             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @Value = Model.Email } })
                             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                         </span>
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         <span class="col-md-5">
