--- a/WorkFlow/Views/Shared/_LoginPartial.cshtml
+++ b/WorkFlow/Views/Shared/_LoginPartial.cshtml
@@ -11,12 +11,13 @@
 
             <ul class="nav navbar-nav" style="margin-right:25px">
 
-                <li class="dropdown">
+                <li class="dropdown">   
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Вы вошли с эл. адреса @User.Identity.GetUserName(). <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>@Html.ActionLink("Редактировать профиль", "Index", "Manage")</li>
-                        @*<li>@Ajax.ActionLink("Мои вакансии", "ShowVacanciesOf", "Vacancies", new { email = @User.Identity.GetUserName() }, new AjaxOptions { HttpMethod = "POST"})
-                        </li>*@
+                            @{int id = WorkFlow.Controllers.DatabaseController.DoSQL<WorkFlow.Models.DataBaseModels.Companies>(String.Format("Select * From Companies Where Email = '{0}'", User.Identity.GetUserName())).LastOrDefault().Id;}
+
+                       <li>@Html.ActionLink("My page", "Index", "CompanyInfo", new { id = @id }, new { })</li>
                         <li>@Html.ActionLink("Add new vacancy", "Create", "Vacancies")</li>
                         <li class="divider"></li>
                         <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a></li>
