--- a/WorkFlow/Views/Vacancies/EditVacancyInfo.cshtml
+++ b/WorkFlow/Views/Vacancies/EditVacancyInfo.cshtml
@@ -30,7 +30,7 @@
 <hr />
 <h2>Or you can fill out form here and click "Create". </h2>
 
-@using (Ajax.BeginForm("CreateVacancy", "Manage", new AjaxOptions { HttpMethod = "POST" }))
+@using (Ajax.BeginForm("EditVacancy", "Manage", new AjaxOptions { HttpMethod = "POST" }))
 {
     @Html.AntiForgeryToken()
 
@@ -38,11 +38,18 @@
         <h4>Vacancies</h4>
         <hr />
 
+        <div class="form-group hidden">
+            @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", @value = Model.Id } })
+                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @value = Model.Name } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,7 +57,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.OpenDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OpenDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.OpenDate, new { htmlAttributes = new { @class = "form-control", @value = Model.OpenDate} })
                 @Html.ValidationMessageFor(model => model.OpenDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -58,7 +65,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", @value = Model.Amount } })
                 @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -66,7 +73,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", @value = Model.Description } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
 
@@ -101,7 +108,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Edit" class="btn btn-default" />
             </div>
         </div>
     </div>
